<resources>
    <string name="app_name">Marvel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_characters" >Characters</string>
    <string name="title_bookmarks" >Bookmarks</string>
    <string name="title_creators">Creators</string>
    <string name="character">character</string>
    <string name="comics">Comics</string>
    <string name="bookmark_icon">bookmark_icon</string>
    <string name="character_name">character_name</string>
    <string name="name" />
    <string name="btnbookmark">btnBookmark</string>
    <string name="clean_bookmark">Clean Bookmark</string>
    <string name="you_haven_t_added_nany_bookmarks_yet_n_ngo_to_characters_and_add_your_favourite_hero">You haven\'t added \nany bookmarks yet\n\nGo to characters and add your favourite hero</string>
</resources>