<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/character_detail_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/character"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

        <TextView
            android:id="@+id/collection_uri"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>




        <TextView
            android:id="@+id/character_detail_explanation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_comics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_detail_image" />

        <TextView
            android:id="@+id/tv_comics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/comics"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/character_detail_image"
            app:layout_constraintTop_toBottomOf="@id/character_detail_explanation" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frame_comics"
            android:name="com.guessaname.marvelapp.ui.fragment.ComicsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comics" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="464dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:onClick="buttonPressed"
            android:backgroundTint="@color/white"
            android:src="@drawable/bookmarks"
            app:borderWidth="0dp"
            app:layout_constraintEnd_toEndOf="@+id/character_detail_image"
            app:layout_constraintTop_toTopOf="@+id/character_detail_image"
            android:contentDescription="@string/btnbookmark"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>